--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,29 +14,75 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+
+  @media (max-width: 680px) {
+	width: calc(100vw - 20px);
+	margin-top: 10px;
+  }
 }
 
 .content {
   padding: 40px 0;
 
   &__title {
-    margin: 35px 0;
+    font-weight: 800;
+	font-size: 38px;
+	margin: 60px 0px 50px 0px;
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	grid-column-gap: 11px;
+
+	@media (max-width: 1400px) {
+		grid-template-columns: repeat(3, 1fr);
+	
+	}
+	@media (max-width: 1060px) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	@media (max-width: 700px) {
+		grid-template-columns: repeat(1, 1fr);
+	}
+	
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+	
+	@media (max-width: 1260px) {
+	
+		.categories {
+			width: 100%;
+			overflow: auto;
+			ul {
+				width: 600px;
+			}
+		}
+
+		.sort {
+			padding-left: 20px;
+			b {
+				display: none;
+			}
+		}
+	}
+
+	@media (max-width: 820px) {
+		flex-direction: column;
+		gap: 30px
+	}
+	
   }
 }
 
 .container {
+	
   width: $container-width;
   margin: 0 auto;
 
@@ -47,6 +93,7 @@ body {
       margin: 0;
     }
   }
+  
 }
 
 .cart {
@@ -56,10 +103,16 @@ body {
     align-items: center;
   }
 
+  .content__items {
+	display: block;
+  }
+
   .content__title {
     display: flex;
     align-items: center;
     font-size: 32px;
+
+	
 
     svg {
       position: relative;
